Edited wiki page through web user interface.

--- a/wiki/Pypress4Gae.wiki
+++ b/wiki/Pypress4Gae.wiki
@@ -2,7 +2,7 @@
 #labels Phase-Design
 
 === Link ===
-[http://code.google.com/p/ pypress4gae]
+[http://code.google.com/p/pypress4gae/ pypress4gae]
 
 === Merging the projects ===
 If a pypress4gae developer is available, let's merge this project into it.
