Edited wiki page through web user interface.

--- a/wiki/Pypress4Gae.wiki
+++ b/wiki/Pypress4Gae.wiki
@@ -1,5 +1,5 @@
 #summary One-sentence summary of this page.
-#labels Phase-Design
+#labels Phase-Design,Featured
 
 === Link ===
 [http://code.google.com/p/pypress4gae/ pypress4gae]
